--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -38,7 +38,7 @@ jobs:
         # will obviously return error 404 not found.
         run: ./trunk build --release --public-url $public_url
         env:
-          public_url: "henry.is-a.dev"
+          public_url: "https://henry.is-a.dev"
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
         with:
